# angular-lcm-samples

./: README.md
abs-inj/: BUILD  main.ts  sub.ts  tsconfig.json
angular-repo-examples/: BUILD  tsconfig.json
angular-repo-examples/common/: BUILD.bazel
angular-repo-examples/core/: BUILD.bazel
angular-repo-examples/forms/: BUILD.bazel
angular-repo-examples/service-worker/push/: BUILD.bazel
angular-repo-examples/service-worker/registration-options/: BUILD.bazel
bazel/: ng_module.bzl
c-to-c-forward-ref/: app.ts  main.ts
c-to-c-with-providers/: BUILD  main.ng.html  main.ts  stubbed-service.ts  sub.ts
change-detection-field/: main.ts
error-const-import/: BUILD  main.ts  template.ts
error-orphan-comp/: BUILD  app.ts  main.ts  tsconfig.json
extra-imports/: BUILD  app.ts  external_comp.ts  external_module.ts  internal_comp.ts  internal_module.ts  main_comp.ts  main_module.ts  tsconfig.json
hello-world/: BUILD
m-forward-ref/: BUILD  get-message.ts  main.ng.html  main.ts  sub.ts
m-to-c/: app.ts  main.ts  sub.ng.html
m-to-c-with-providers/: main.ts  sub.ts
m-to-m/: BUILD  app.ts  main.ts
m-to-m-cyclic/: BUILD  app.ts  main.ts
m-to-m-forward-ref/: BUILD  main.ng.html  main.ts
m-to-m-nested-scope/: app.ts  main.ts  sub.ts
m-to-m-only-m/: BUILD  main.ts  sub.ts
m-to-m-with-providers/: BUILD  in-module-service.ts  main.ts  stubbed-service.ts
main-sub/: BUILD  index.html  sub.ts
pb-fail-factory-import/: BUILD  index.html  main.ts  sub.ts
s-to-m/: BUILD  main.ts  sub.ts  sub2.ts  sub3.ts  sub4.ts
single-file/: BUILD  app.ts
